--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FF9000" />
+    <meta name="theme-color" content="#e7d6bf" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
 
     <title>Map In Cult</title>
